samples/_failures_safe/1761514140_0cbe8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73a38882.c: In function ‘main’:
./samples/SAFE/__tmp_73a38882.c:138:5: error: expected expression at end of input
  138 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_73a38882.c:138:5: error: expected declaration or statement at end of input
